<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

		<ImageView
        	android:id="@+id/imageView1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
        	android:src="@drawable/logo_lbc_firstview" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/create_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:text="@string/email"
            android:textColor="@color/black_color"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:text="@string/password"
            android:textColor="@color/black_color"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/normal_padding"
            android:text="@string/connect" />
    
    </LinearLayout>


</RelativeLayout>